@@ -14,22 +14,16 @@
 
 package com.predic8.membrane.core.interceptor.session;
 
-import com.google.common.cache.Cache;
-import com.google.common.cache.CacheBuilder;
-import com.predic8.membrane.annot.MCAttribute;
-import com.predic8.membrane.annot.MCElement;
-import com.predic8.membrane.core.Router;
-import com.predic8.membrane.core.exchange.Exchange;
-import com.predic8.membrane.core.http.Header;
-import com.predic8.membrane.core.http.HeaderField;
-import com.predic8.membrane.core.http.HeaderName;
-import com.predic8.membrane.core.interceptor.session.Session;
-import com.predic8.membrane.core.interceptor.session.SessionManager;
+import com.google.common.cache.*;
+import com.predic8.membrane.annot.*;
+import com.predic8.membrane.core.*;
+import com.predic8.membrane.core.exchange.*;
+import com.predic8.membrane.core.http.*;
 
-import java.time.Duration;
+import java.time.*;
 import java.util.*;
-import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
+import java.util.concurrent.*;
+import java.util.stream.*;
 
 @MCElement(name = "inMemorySessionManager2")
 public class InMemorySessionManager extends SessionManager {
@@ -79,22 +73,21 @@ public class InMemorySessionManager extends SessionManager {
     }
 
     private void createSessionIdsForNewSessions(Session[] session) {
-        Arrays.stream(session).filter(s -> s.get(ID_NAME) == null).forEach(s -> s.put(ID_NAME, cookieNamePrefix + "-" +UUID.randomUUID().toString()));
+        Arrays.stream(session).filter(s -> s.get(ID_NAME) == null).forEach(s -> s.put(ID_NAME, cookieNamePrefix + "-" + UUID.randomUUID()));
     }
 
     private void fixMergedSessionId(Session[] session) {
         Arrays.stream(session)
                 .filter(s -> s.get(ID_NAME).toString().contains(","))
-                .forEach(s -> s.put(ID_NAME, cookieNamePrefix + "-" +UUID.randomUUID().toString()));
+                .forEach(s -> s.put(ID_NAME, cookieNamePrefix + "-" + UUID.randomUUID()));
     }
 
     @Override
     public List<String> getInvalidCookies(Exchange exc, String validCookie) {
-        List<HeaderField> values = exc.getRequest().getHeader().getValues(new HeaderName(Header.COOKIE));
-        return values.stream()
-                .filter(hf -> hf.getValue().startsWith(cookieNamePrefix))
-                .map(hf -> hf.getValue()).filter(value -> !value.contains(validCookie))
-                .collect(Collectors.toList());
+        return getCookieHeaderFields(exc).stream()
+                .map(HeaderField::getValue)
+                .filter(value -> value.startsWith(cookieNamePrefix)).filter(value -> !value.contains(validCookie))
+                .toList();
     }
 
     @Override
@@ -110,6 +103,4 @@ public class InMemorySessionManager extends SessionManager {
             return sessions.getIfPresent(originalCookie) != null;
         }
     }
-
-
 }
